<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/pho_bg">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_top_height"
        android:background="@android:color/white"
        android:fitsSystemWindows="true" />

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_top_height"
            android:background="@android:color/white">

            <FrameLayout
                android:id="@+id/iv_back_poi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/iv_back_poi_imageview"
                    android:layout_width="@dimen/icon_mini_height"
                    android:layout_height="@dimen/icon_mini_height"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/tv_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/tv_search_imageview"
                    android:layout_width="@dimen/icon_small_height"
                    android:layout_height="@dimen/icon_small_height"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_centerInParent="true"
                android:ellipsize="marquee"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/text_city_search_result"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/iv_search_poi"
                android:layout_toRightOf="@+id/iv_back_poi"
                android:background="@drawable/bg_select"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/iv_search_imageview"
                    android:layout_width="@dimen/icon_mini_height"
                    android:layout_height="@dimen/icon_mini_height"
                    android:layout_gravity="center_vertical" />

                <so.bubu.lib.wiget.ClearEditText
                    android:id="@+id/et_content_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@color/color_select_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/text_please_enter_key"
                    android:imeOptions="actionSearch"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/color_menu_infor"
                    android:textCursorDrawable="@drawable/edittext_cursor_drawable"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/iv_search_poi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/text_city_search"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                />

        </RelativeLayout>

        <View style="@style/normal_line" />

        <ScrollView
            android:id="@+id/sv_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">

                <wiget.NoScrollListView
                    android:id="@+id/nsll_select_history"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animationCache="false"
                    android:divider="@color/color_listview_line"
                    android:dividerHeight="0.5dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:listSelector="@android:color/transparent"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:scrollingCache="false" />

                <View
                    style="@style/normal_line"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp" />

                <TextView
                    android:id="@+id/tv_clear_history"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/text_clear_search_history"
                    android:textColor="@color/color_clear_history"
                    android:textSize="15sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


    <com.cjj.MaterialRefreshLayout
        android:id="@+id/mrl_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:isLoadMore="true"
        app:overlay="false"
        android:layout_marginTop="44.5dp"
        app:progress_colors="@array/text_more_anim"
        app:progress_size_type="normal"
        app:wave_color="@color/color_tab_line"
        app:wave_height_type="normal"
        app:wave_show="true">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lv_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animationCache="false"
        android:background="@android:color/white"
        style="@style/BaseRecyclerView"
        android:scrollingCache="false" />
    </com.cjj.MaterialRefreshLayout>

</FrameLayout>
